generate_data/jitfailure-dolfin_expression_26a722c82dafc4dacc4e54e163a6ab9a/error.log
In file included from /usr/local/include/boost/config/header_deprecated.hpp:18,
                 from /usr/local/include/boost/core/swap.hpp:19,
                 from /usr/local/include/boost/optional/optional.hpp:33,
                 from /usr/local/include/boost/optional.hpp:15,
                 from /usr/local/include/dolfin/parameter/Parameters.h:24,
                 from /usr/local/include/dolfin/common/Variable.h:28,
                 from /usr/local/include/dolfin/function/GenericFunction.h:30,
                 from /usr/local/include/dolfin/function/Expression.h:28,
                 from /tmp/tmpl0ubl8aq/dolfin_expression_26a722c82dafc4dacc4e54e163a6ab9a.cpp:13:
/usr/local/include/boost/core/swap.hpp:26:1: note: ‘#pragma message: This header is deprecated. Use boost/core/invoke_swap.hpp instead.’
   26 | BOOST_HEADER_DEPRECATED("boost/core/invoke_swap.hpp")
      | ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/tmpl0ubl8aq/dolfin_expression_26a722c82dafc4dacc4e54e163a6ab9a.cpp: In member function ‘virtual void dolfin::dolfin_expression_26a722c82dafc4dacc4e54e163a6ab9a::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpl0ubl8aq/dolfin_expression_26a722c82dafc4dacc4e54e163a6ab9a.cpp:61:40: error: expression cannot be used as a function
   61 |           values[0] = 4 * 0.001 * x[1] (7.499999999999999e-06 - x[1]) / (7.499999999999999e-06**2);
      |                                   ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tmpl0ubl8aq/dolfin_expression_26a722c82dafc4dacc4e54e163a6ab9a.cpp:61:96: error: invalid type argument of unary ‘*’ (have ‘int’)
   61 |           values[0] = 4 * 0.001 * x[1] (7.499999999999999e-06 - x[1]) / (7.499999999999999e-06**2);
      |                                                                                                ^~
